<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Choose_game">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/game2_button_pl2"
            android:layout_width="196dp"
            android:layout_height="44dp"
            android:layout_marginTop="12dp"
            android:text="@string/game2_pl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game1_button_pl2" />

        <Button
            android:id="@+id/game4_button_pl2"
            android:layout_width="196dp"
            android:layout_height="44dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="163dp"
            android:text="@string/game4_pl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game3_button_pl2" />

        <Button
            android:id="@+id/return_button_pl2"
            android:layout_width="196dp"
            android:layout_height="44dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="163dp"
            android:text="@string/return_pl"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game4_button_pl2"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/game1_button_pl2"
            android:layout_width="196dp"
            android:layout_height="44dp"
            android:layout_marginTop="164dp"
            android:text="@string/game1_pl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/game3_button_pl2"
            android:layout_width="196dp"
            android:layout_height="44dp"
            android:layout_marginStart="162dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="161dp"
            android:text="@string/game3_pl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game2_button_pl2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>